added hubot input/output textboxes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <h1 id="hello-phrase">Hello Hubot!</h1>
+<section class="content">
+  <textarea id="hubot-output">Foo</textarea>
+  <textarea id="hubot-input">Foo</textarea>
+</section>
 <br>
 <button id="ping-button" type="button">Ping</button>
 <br>
