discovered issue not responding to ping

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <textarea id="hubot-input">Foo</textarea>
 </section>
 <br>
-<button id="ping-button" type="button">Ping</button>
+<button id="enter-button" type="button">Enter</button>
 <br>
 <a href="url" id="close-window">close this window</a>
