--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <h1 id="hello-phrase">Hello Hubot!</h1>
-<section class="content">
-  <textarea id="hubot-output">Foo</textarea>
-  <textarea id="hubot-input">Foo</textarea>
-</section>
+<div class="content" id="hubot-output">Foo</div>
+<textarea class="content" id="hubot-input">Foo</textarea>
 <br>
 <button id="enter-button" type="button">Enter</button>
