more css tweaks

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="renderer.js"></script>
 </head>
 
-<h1 id="hello-phrase">Hello Hubot!</h1>
+<h1 id="hello-phrase">Hello myhubot2!</h1>
 <div class="content" id="hubot-output">Foo</div>
 <textarea class="content" id="hubot-input">Foo</textarea>
 <br>
