moved constants up to top

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="renderer.js"></script>
 </head>
 
-<h1 id="hello-phrase">Hello myhubot2!</h1>
-<div class="content" id="hubot-output">Foo</div>
-<textarea class="content" id="hubot-input">Foo</textarea>
+<h1 id="hello-phrase">Hello myhubot!</h1>
+<div class="content" id="hubot-output">...</div>
+<textarea class="content" id="hubot-input"></textarea>
 <br>
 <button id="enter-button" type="button">Enter</button>
