send commands on enter key

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
 <div class="content" id="hubot-output">...</div>
-<textarea class="content" id="hubot-input"></textarea>
+<input class="content" type="text" placeholder="send commands to myhubot" id="hubot-input"/>
 <br>
 <button id="enter-button" type="button">Enter</button>
