added send button to input area

--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
 <div class="content" id="hubot-output">...</div>
-<input class="content" type="text" placeholder="send commands to myhubot" id="hubot-input"/>
+<div id="input-area">
+  <input class="content" type="text" placeholder="type your message" id="hubot-input"/>
+  <button id="send-button" type="button">Send</button>
+</div>
