--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
-<div class="content" id="hubot-output">...</div>
+<div class="content" id="hubot-output">launching hubot...</div>
+<div id="hint">try "myhubot the rules"</div>
 <div id="input-area">
   <input class="content" type="text" placeholder="type your message" id="hubot-input"/>
   <button id="send-button" type="button">Send</button>
