updated overall css theme

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
 <div class="content" id="hubot-output">launching hubot...</div>
-<div id="hint">try "myhubot the rules"</div>
-<div id="input-area">
-  <input class="content" type="text" placeholder="type your message" id="hubot-input"/>
-  <button id="send-button" type="button">Send</button>
+<div id="bottom-section">
+  <div id="hint">try "myhubot the rules"</div>
+  <div id="input-area">
+    <input class="content" type="text" placeholder="type your message" id="hubot-input"/>
+    <button id="send-button" type="button">Send</button>
+  </div>
 </div>
