added scroll animation to output

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
-<div class="content" id="hubot-output">launching hubot...</div>
+<div id="hubot-output">launching hubot...</div>
 <div id="bottom-section">
   <div id="hint">try "myhubot the rules"</div>
   <div id="input-area">
-    <input class="content" type="text" placeholder="type your message" id="hubot-input"/>
+    <input type="text" placeholder="type your message" id="hubot-input"/>
     <button id="send-button" type="button">Send</button>
   </div>
 </div>
