--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
     <input type="text" placeholder="type your message" id="hubot-input"/>
     <button id="send-button" type="button">Send</button>
   </div>
+  <div id="footer">powered by electron, hubot, and you!</div>
 </div>
