--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
-<div id="hubot-output">launching hubot...</div>
+<div id="hubot-output">
+  <div class="hubot-msg">launching hubot...</div>
+</div>
 <div id="bottom-section">
   <div id="hint">try "myhubot the rules"</div>
   <div id="input-area">
