--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
 <div id="hubot-output">
-  <div class="hubot-msg">launching hubot...</div>
+  <!-- <div class="hubot-msg">launching hubot...</div> -->
 </div>
 <div id="bottom-section">
   <div id="hint">try "myhubot the rules"</div>
