got hubot avatar added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1 id="hello-phrase">Hello myhubot!</h1>
 <div id="hubot-output">
-  <div class="output-row">
+  <!-- <div class="output-row">
       <div class="hubot-avatar">
           <img src="hubot.png" />
       </div>
@@ -32,7 +32,7 @@
       <div class="hubot-message">
           whassup
       </div>
-  </div>
+  </div> -->
 
 </div>
 <div id="bottom-section">
