added placeholder help button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div id="bottom-section">
   <div id="hint">try "myhubot the rules"</div>
   <div id="input-area">
-    <input type="text" placeholder="type your message" id="hubot-input"/>
+    <button id="help-button" type="button">+</button>
+    <input id="hubot-input" type="text" placeholder="type your message" />
     <button id="send-button" type="button">Send</button>
   </div>
   <div id="footer">powered by electron, hubot, and you!</div>
