got load new scripts working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="bottom-section">
   <div id="hint">try "myhubot the rules"</div>
   <div id="input-area">
-    <button id="help-button" type="button">+</button>
+    <button id="load-new-button" type="button">+</button>
     <input id="hubot-input" type="text" placeholder="type your message" />
     <button id="send-button" type="button">Send</button>
   </div>
