added first attempt at scripts input section

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <script src="renderer.js"></script>
 </head>
 
-<h1 id="hello-phrase">Hello myhubot!</h1>
-<div id="hubot-output">
-</div>
-<div id="bottom-section">
-  <div id="hint">try "myhubot the rules"</div>
-  <div id="input-area">
-    <button id="load-new-button" type="button">+</button>
-    <input id="hubot-input" type="text" placeholder="type your message" />
-    <button id="send-button" type="button">Send</button>
+<div id="left-section">
+  <h1 id="hello-phrase">Hello hubot!</h1>
+  <div id="hubot-output"></div>
+  <div id="bottom-section">
+    <div id="hint">try "hubot the rules"</div>
+    <div id="input-area">
+      <button id="load-new-button" type="button">+</button>
+      <input id="hubot-input" type="text" placeholder="type your message" />
+      <button id="send-button" type="button">Send</button>
+    </div>
   </div>
-  <div id="footer">powered by electron, hubot, and you!</div>
 </div>
+<div id="right-section">
+  write scripts
+</div>
+<div id="footer">powered by electron, hubot, and you!</div>
