--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </div>
 </div>
 <div id="right-section">
-  write scripts
+  <h1>write your own scripts</h1>
+  <textarea id="script-textarea"></textarea>
 </div>
 <div id="footer">powered by electron, hubot, and you!</div>
