added button row

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div id="bottom-section">
     <div id="hint">try "hubot the rules"</div>
     <div id="input-area">
-      <button id="load-new-button" type="button">+</button>
       <input id="hubot-input" type="text" placeholder="type your message" />
       <button id="send-button" type="button">Send</button>
     </div>
@@ -20,6 +19,10 @@
 </div>
 <div id="right-section">
   <h1>write your own scripts</h1>
+  <div id="button-area">
+      <button id="upload-button" type="button">Upload</button>
+      <button id="save-button" type="button">Save</button>
+  </div>
   <textarea id="script-textarea"></textarea>
 </div>
 <div id="footer">powered by electron, hubot, and you!</div>
