expand and collapse scripts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="hubot-output"></div>
   <div id="bottom-section">
     <div id="hint">try "hubot the rules"</div>
+    <button id="scripts-button" type="button">Write Scripts -></button>
     <div id="input-area">
       <input id="hubot-input" type="text" placeholder="type your message" />
       <button id="send-button" type="button">Send</button>
