added hard-coded help

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 id="hello-phrase">How to train your hubot</h1>
   <div id="hubot-output"></div>
   <div id="bottom-section">
-    <div id="hint">try "hubot the rules"</div>
+    <div id="hint">try "hubot help"</div>
     <button id="scripts-button" type="button">Write Scripts -></button>
     <div id="input-area">
       <input id="hubot-input" type="text" placeholder="type your message" />
