fixed not crashing if loading broken play scripts

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </div>
 <div id="right-section">
   <h1>write your own scripts</h1>
+  <div id="script-error">there's a syntax error with the script</div>
   <div id="button-area">
       <button id="upload-button" type="button">Upload</button>
       <button id="save-button" type="button">Save</button>
