more UI adjustments

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div id="hubot-output"></div>
   <div id="bottom-section">
     <div id="hint">try "hubot help"</div>
-    <button id="scripts-button" type="button">Write Scripts -></button>
     <div id="input-area">
       <input id="hubot-input" type="text" placeholder="type your message" />
       <button id="send-button" type="button">Send</button>
+      <button id="scripts-button" type="button">Scripts &gt;</button>
     </div>
   </div>
 </div>
