some code review feedback

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <div id="left-section">
-  <h1 id="hello-phrase">How to train your hubot</h1>
+  <h1>How to train your hubot</h1>
   <div id="hubot-output"></div>
   <div id="bottom-section">
     <div id="hint">try "hubot help"</div>
